# CRDModel

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindSUNDIALS.cmake
data/: FHNmodelArgs.ini  GoldbeterModelArgs.ini  ProgArgs.ini  temp.ini
src/: FHNmodel.cpp  FHNmodel_flat.cpp  FHNmodel_torus.cpp  GoldbeterModel_flat.cpp  GoldbeterModel_torus.cpp
util/: GenCurvatureCoupling.py  GenTorus.py  GenTorusManual.py  MapOutputToTorus.py  PlotGaussianAndCoupling.py  laplaceTerms.m  plotCoupling.m  plotCoupling2d.py  plotGaussianCurvature.m  plot_FHNmodel.py  plot_FHNmodel_flat.py  plot_FHNmodel_torus.py
util/FHNmodel/: MapOutputToTorus.py  plot_FHNmodel_flat.py  plot_FHNmodel_torus.py  runFHNmodelFlat.sh  runFHNmodelTorus.sh
util/GoldbeterModel/: MapOutputToTorus.py  SolveGoldbeterODE.py  plotDomains.m  plot_GoldbeterModel_flat.py  plot_GoldbeterModel_torus.py  runGoldbeterTorus.sh
util/ShellScripts/: runFHNmodelFlat.sh  runFHNmodelTorus.sh  runGoldbeterFlat.sh  runGoldbeterTorus.sh
